--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ header{
 .side-close{
   background:transparent;
   border:0;
-  color:#fff;
+  color:#ffffff;
   font-size:26px;
   cursor:pointer;
 }
